<resources>
    <string name="app_name">Whac A Mole</string>

    <string name="play_button_text">Play</string>

    <string name="your_score">Your score: 0</string>
    <string name="time_left">Time left: 30</string>
    <string name="record_text">Your record: 0</string>

    <string name="play_again_button_text">Play again</string>
    <string name="menu_button_text">Menu</string>

    <string name="start_button_text">Start</string>
    <string name="stop_button_text">Stop</string>

    <string name="rules_text">The main goal of the game is to click the mole as many times as possible, within 30 seconds</string>

</resources>