<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/farmmain"
    tools:context=".view.MenuFragment" >

    <TextView
        android:id="@+id/record_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/custom_font"
        android:text="@string/record_text"
        android:layout_marginTop="@dimen/margin_top_size"
        android:textColor="@color/white"
        android:textSize="@dimen/text_game_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rules" />

    <TextView
        android:id="@+id/rules"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/base_big_margin"
        android:layout_marginTop="@dimen/button_horizontal_margin"
        android:layout_marginEnd="@dimen/base_big_margin"
        android:fontFamily="@font/custom_font"
        android:gravity="center"
        android:text="@string/rules_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_game_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_play"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        android:text="@string/play_button_text"
        android:textSize="@dimen/button_text_size"
        android:fontFamily="@font/custom_font"
        android:backgroundTint="@color/light_blue"
        app:cornerRadius="@dimen/corner_button_radius"
        app:strokeWidth="@dimen/border_button_size"
        app:strokeColor="@color/golden"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>