<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/farmbg"
    tools:context=".view.GameFragment">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_horizontal_margin"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="3">

        <ImageView
            android:id="@+id/hole_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hole"
            android:tag="0"
            android:layout_margin="@dimen/base_margin"/>

        <ImageView
            android:id="@+id/hole_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hole"
            android:tag="1"
            android:layout_margin="@dimen/base_margin"/>

        <ImageView
            android:id="@+id/hole_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hole"
            android:tag="2"
            android:layout_margin="@dimen/base_margin"/>

        <ImageView
            android:id="@+id/hole_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hole"
            android:tag="3"
            android:layout_margin="@dimen/base_margin"/>

        <ImageView
            android:id="@+id/hole_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hole"
            android:tag="4"
            android:layout_margin="@dimen/base_margin"/>

        <ImageView
            android:id="@+id/hole_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hole"
            android:tag="5"
            android:layout_margin="@dimen/base_margin"/>

        <ImageView
            android:id="@+id/hole_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hole"
            android:tag="6"
            android:layout_margin="@dimen/base_margin"/>

        <ImageView
            android:id="@+id/hole_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hole"
            android:tag="7"
            android:layout_margin="@dimen/base_margin"/>

        <ImageView
            android:id="@+id/hole_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hole"
            android:tag="8"
            android:layout_margin="@dimen/base_margin"/>
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_big_margin"
        android:layout_marginBottom="@dimen/base_big_margin"
        android:fontFamily="@font/custom_font"
        android:text="@string/time_left"
        android:textColor="@color/white"
        android:textSize="@dimen/text_game_size"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/base_big_margin"
        android:fontFamily="@font/custom_font"
        android:text="@string/your_score"
        android:textColor="@color/white"
        android:textSize="@dimen/text_game_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/time_left" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="@font/custom_font"
        android:text="@string/start_button_text"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/corner_button_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:strokeColor="@color/golden"
        app:strokeWidth="@dimen/border_button_size" />
</androidx.constraintlayout.widget.ConstraintLayout>